--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+5
+version: 1.0.0+7
 
 environment:
   sdk: ^3.6.1
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   share_plus: ^10.1.4
   csv: ^6.0.0
+  in_app_purchase: ^3.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,11 +61,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  in_app_purchase_platform_interface: ^1.4.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/logo_black.png"
+  image_path: "images/logo_whitebg.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
